<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/azure"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/covid_19_tracker_for_india"
            android:src="@drawable/coronavirus" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/fredoka_one"
            android:text=" COVID 19 INDIA \n TRACKER"
            android:textColor="@color/spring_green"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/updateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/last_updated"
            android:layout_marginEnd="10dp"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/caseid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_marginTop="9dp"
        android:layout_margin="9dp"
        android:baselineAligned="false"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_chettan"
                android:text="@string/total_cases"
                android:textColor="@color/dark_green"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/the_total_cases"
                android:src="@drawable/virus"
                android:tint="@color/dark_green" />

            <TextView
                android:id="@+id/totalCasesTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8000"
                android:textColor="@color/dark_green" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_chettan"
                android:text="@string/active"
                android:textColor="@color/light_blue"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/active"
                android:src="@drawable/hospitalcopy" />

            <TextView
                android:id="@+id/activeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_400"
                android:textColor="@color/light_blue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_chettan"
                android:text="@string/recovered"
                android:textColor="@color/dark_blue"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/recovered"
                android:src="@drawable/patientrecovered" />

            <TextView
                android:id="@+id/recoverTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7000"
                android:textColor="@color/dark_blue" />

        </LinearLayout>

        <LinearLayout


            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_chettan"
                android:text="@string/deaths"
                android:textColor="@color/dark_red"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/deaths"
                android:src="@drawable/deathone"
                android:tint="@color/dark_red" />

            <TextView
                android:id="@+id/deathTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_345"
                android:textColor="@color/dark_red" />

        </LinearLayout>

    </LinearLayout>


    <ListView
        android:id="@+id/listViewTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:layout_below="@id/caseid"
        android:layout_marginBottom="5dp"
        />




</RelativeLayout>